# anonymous-chat

./: .easignore  .gitignore  docker-compose.yml
.github/workflows/: azure-static-web-apps-proud-meadow-0f022cd00.yml  azure-static-web-apps-red-coast-06c6dbb00.yml  backend-acr.yml  frontend.yml
backend/: .env.example  Dockerfile  README.md  app.db  pyproject.toml
backend/app/: database.py  main.py  matchmaker.py  push_service.py  schemas.py  settings.py  typing_utils.py
backend/app/api/: admin.py  ws.py
backend/app/core/: matchmaker.py  push_service.py
backend/app/db/: database.py
backend/app/models/: schemas.py  types.py
backend/stranger_chat_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ConfirmDialog.tsx  HeaderBar.tsx  IdleScreen.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  SearchingScreen.tsx
frontend/src/hooks/: useKeyboardOffset.ts
frontend/src/state/: useChatStore.ts
frontend/src/types/: events.ts
frontend/src/utils/: sounds.ts  theme.ts
frontend/src/ws/: client.ts
mobile/: STRANGER_CHAT.md  app.json  eas.json  google-services.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/src/components/: AppBottomSheet.tsx  ConfirmDialog.tsx  EndChatBottomSheet.tsx  HeaderBar.tsx  IdleScreen.tsx  MessageInput.tsx  MessageList.tsx  PrivacyPolicyModal.tsx  QuoteCycler.tsx  SearchingScreen.tsx  SettingsDialog.tsx  TutorialOverlay.tsx
(+7 files in other folders)
