[project]
name = "stranger-chat-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
]
requires-python = ">=3.11"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000